plottable dev setup

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "url": ""
   },
   "scripts": {
-    "development": "gulp development",
-    "build": "NODE_ENV=production gulp build",
+    "rm": "rm -rf  node_modules/plottable",
+    "copy": " cp -a ~/test-apps/plottable ~/apps/plottable-tests/node_modules/plottable",
+    "development": "npm run rm && npm run copy && gulp development",
+    "build": "npm run rm && npm run copy && NODE_ENV=production gulp build",
     "lint": "eslint ."
   },
   "dependencies": {
