--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   "rules": {
     "indent": ["error", "tab"],
     "comma-dangle": 0,
+    "no-underscore-dangle": 0,
     "prefer-arrow-callback": ["error", { "allowNamedFunctions": true }],
   }
 }
