stacked column into bar chart

--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "url": ""
   },
   "scripts": {
-    "rm": "rm -rf  node_modules/plottable",
-    "copy": " cp -a ~/test-apps/plottable ~/apps/plottable-tests/node_modules/plottable",
+    "fix": "eslint --fix src/javascripts/*.js",
     "development": "gulp development",
-    "build": "npm run rm && npm run copy && NODE_ENV=production gulp build",
+    "build": "NODE_ENV=production gulp build",
     "lint": "eslint ."
   },
   "dependencies": {
